designed profile info , events , user model

--- a/src/app/profile/user-info/user-info.component.html
+++ b/src/app/profile/user-info/user-info.component.html
@@ -1,1 +1,28 @@
-<p>user-info works!</p>
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="../../../assets/WhatsApp Image 2019-04-19 at 2.13.31 AM (2).jpeg"
+                            class="img-responsive" alt="profile Picture">
+                    </div>
+                    <div class="col-md-6">
+                        <ul class="list-group ">
+                            <li class="list-group-item">UserName</li>
+                            <li class="list-group-item"> Account</li>
+                            <li class="list-group-item">University</li>
+                            <li class="list-group-item">Faculty</li>
+                            <li class="list-group-item">year</li>
+                            <li class="list-group-item">major</li>
+                            <li class="list-group-item">Mobile</li>
+                            <li class="list-group-item">birth date</li>
+                            <li class="list-group-item">membership history</li>
+                            <li class="list-group-item">partcipated events</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
