--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,8 @@
-<p>profile works!</p>
+<div class="row justify-content-lg-center">
+    <div class="col-md-7">
+        <app-user-info></app-user-info>
+    </div>
+    <div class="col-md-5">
+        <app-user-events></app-user-events>
+    </div>
+</div>
