--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <app-header></app-header>
 <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="large" color="#d53524" type="ball-clip-rotate-multiple"></ngx-spinner>
-<div class="container">
-    <app-profile></app-profile>
-</div>
+<router-outlet></router-outlet>
