--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-header></app-header>
 <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="large" color="#d53524" type="ball-clip-rotate-multiple"></ngx-spinner>
-<router-outlet></router-outlet>
+<div class="container">
+<!-- <router-outlet></router-outlet> -->
+<app-profile></app-profile>
+</div>
