--- a/src/app/profile/user-info/user-info.component.css
+++ b/src/app/profile/user-info/user-info.component.css
@@ -1,17 +1,30 @@
 .row{
-    padding: 0px;
-}
-.col-md-6{
-    padding: 0px;
-}
-.card-body{
-    padding: 0px;
-    overflow: hidden;
+    padding: 15px;
 }
 img{
-    margin: 0px;
-    padding: 0px;
-    width:100%;
-    height: 100%;
+    width: 256px;
+    border-radius: 50% !important;
+    height: 200px !important;
 }
-
+label{
+    
+    /* font-weight: bold; */
+}
+span{
+    
+    /* font-weight: bold; */
+    
+}
+.card.third{
+    height: 289px;
+}
+.card-body{
+    color: #0275d8;
+  
+}
+.card {
+    border: 0.5px solid #0275d8;
+}
+.card:hover{
+    border: 0.5px solid palevioletred   ;
+}
