--- a/src/app/profile/user-info/user-info.component.html
+++ b/src/app/profile/user-info/user-info.component.html
@@ -1,26 +1,91 @@
-<div class="row">
-    <div class="col-md-12">
+<div class="row justify-content-center">
+    <div class="col-md-3">
+        <img src="../../../assets/IMG_6029.JPG" alt="UserName" class=" rounded-circle img-thumbnail ">
+    </div>
+    <div class="col-md-7 ">
         <div class="card">
+            <div class="card-header">
+                <h5><i class="fa fa-info-circle"></i> Basic info</h5>
+            </div>
             <div class="card-body">
-                <div class="row">
-                    <div class="col-md-6">
-                        <img src="../../../assets/WhatsApp Image 2019-04-19 at 2.13.31 AM (2).jpeg"
-                            class="img-responsive" alt="profile Picture">
-                    </div>
-                    <div class="col-md-6">
-                        <ul class="list-group ">
-                            <li class="list-group-item">UserName</li>
-                            <li class="list-group-item"> Account</li>
-                            <li class="list-group-item">University</li>
-                            <li class="list-group-item">Faculty</li>
-                            <li class="list-group-item">year</li>
-                            <li class="list-group-item">major</li>
-                            <li class="list-group-item">Mobile</li>
-                            <li class="list-group-item">birth date</li>
-                            <li class="list-group-item">membership history</li>
-                            <li class="list-group-item">partcipated events</li>
-                        </ul>
-                    </div>
+                <div class="form-group">
+                    <label for="">Name: </label>
+                    <span>UserName</span>
+                </div>
+                <div class="form-group">
+                    <label for="">Mobile: </label>
+                    <span>Mobile</span>
+                </div>
+                <div class="form-group">
+                    <label for="">Email: </label>
+                    <span>Email</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <div class="card">
+            <div class="card-header">
+                <h5><i class="fa fa-university"></i> Education</h5>
+            </div>
+            <div class="card-body">
+                <div class="form-group">
+                    <label for="">University: </label>
+                    <span>University</span>
+                </div>
+                <div class="form-group">
+                    <label for="">faculty: </label>
+                    <span>faculty</span>
+                </div>
+                <div class="form-group">
+                    <label for="">Major: </label>
+                    <span>Major</span>
+                </div>
+                <div class="form-group">
+                    <label for="">Year: </label>
+                    <span>Year</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="card third">
+            <div class="card-header">
+                <h5><i class="fas fa-hand-paper"></i> Partcipation</h5>
+            </div>
+            <div class="card-body">
+                <div class="form-group">
+                    <span>Event 1</span>
+                </div>
+                <div class="form-group">
+                    <span>Event 1</span>
+                </div>
+                <div class="form-group">
+                    <span>Event 1</span>
+                </div>
+                <div class="form-group">
+                    <span>Event 1</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row justify-content-center">
+    <div class="col-md-10">
+        <div class="card">
+            <div class="card-header">
+                <h5><i class="fa fa-briefcase fa-fw"></i> Membership History</h5>
+            </div>
+            <div class="card-body">
+                <div class="form-group">
+                    <label>2015: </label>
+                    <span>IT member</span>
+                </div>
+                <div class="form-group">
+                    <label>2016: </label>
+                    <span>IT Vice Head</span>
                 </div>
             </div>
         </div>
