editing profile and posts input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-header></app-header>
 <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="large" color="#d53524" type="ball-clip-rotate-multiple"></ngx-spinner>
 <div class="container">
-<!-- <router-outlet></router-outlet> -->
-<app-profile></app-profile>
+<router-outlet></router-outlet>
 </div>
