--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,9 @@
-<app-user-info></app-user-info>
+<app-profile-controls></app-profile-controls>
+<div class="row">
+    <div class="col-md-6">
+        <app-user-info></app-user-info>
+    </div>
+    <div class="col-md-6">
+        <router-outlet></router-outlet>
+    </div>
+</div>
