--- a/src/app/profile/user-info/user-info.component.html
+++ b/src/app/profile/user-info/user-info.component.html
@@ -1,13 +1,14 @@
-<div class="row justify-content-center">
-    <div class="col-md-3">
-        <img src="../../../assets/IMG_6029.JPG" alt="UserName" class=" rounded-circle img-thumbnail ">
-    </div>
-    <div class="col-md-7 ">
+<div class="row">
+    <div class="col-md-12">
+
         <div class="card">
             <div class="card-header">
                 <h5><i class="fa fa-info-circle"></i> Basic info</h5>
             </div>
             <div class="card-body">
+                <!-- <div class="form-group img-div ">
+                    <img src="../../../assets/IMG_6029.JPG" alt="UserName" class="  img-thumbnail ">
+                </div> -->
                 <div class="form-group">
                     <label for="">Name: </label>
                     <span>UserName</span>
@@ -20,61 +21,11 @@
                     <label for="">Email: </label>
                     <span>Email</span>
                 </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row justify-content-center">
-    <div class="col-md-6">
-        <div class="card">
-            <div class="card-header">
-                <h5><i class="fa fa-university"></i> Education</h5>
-            </div>
-            <div class="card-body">
                 <div class="form-group">
-                    <label for="">University: </label>
-                    <span>University</span>
-                </div>
-                <div class="form-group">
-                    <label for="">faculty: </label>
-                    <span>faculty</span>
-                </div>
-                <div class="form-group">
-                    <label for="">Major: </label>
-                    <span>Major</span>
-                </div>
-                <div class="form-group">
-                    <label for="">Year: </label>
-                    <span>Year</span>
+                    <label for="">Education: </label>
+                    <span>Education</span>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="card third">
-            <div class="card-header">
-                <h5><i class="fas fa-hand-paper"></i> Partcipation</h5>
-            </div>
-            <div class="card-body">
-                <div class="form-group">
-                    <span>Event 1</span>
-                </div>
-                <div class="form-group">
-                    <span>Event 1</span>
-                </div>
-                <div class="form-group">
-                    <span>Event 1</span>
-                </div>
-                <div class="form-group">
-                    <span>Event 1</span>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row justify-content-center">
-    <div class="col-md-10">
-        <div class="card">
             <div class="card-header">
                 <h5><i class="fa fa-briefcase fa-fw"></i> Membership History</h5>
             </div>
@@ -86,6 +37,14 @@
                 <div class="form-group">
                     <label>2016: </label>
                     <span>IT Vice Head</span>
+                </div>
+            </div>
+            <div class="card-header">
+                <h5><i class="fas fa-hand-paper"></i> Partcipation</h5>
+            </div>
+            <div class="card-body">
+                <div class="form-group">
+                    <span>Event 1</span>
                 </div>
             </div>
         </div>
