--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,36 +1,42 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" 
+    [routerLink]="['/home']" 
+    style="cursor: pointer;">
+
       <img src="assets/images/connected-family.png" width="30" height="30" class="d-inline-block align-top mr-2" alt="">
+
       <span class="blue">Connected</span>
       <span class="red"> Family</span>
     </a>
-    <button class="navbar-toggler" [ngClass]="{'active': dropmenu}" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-      aria-expanded="false" aria-label="Toggle navigation" (click)="drop($event)">
+
+    <button class="navbar-toggler" [ngClass]="{'active': dropmenu}" type="button" data-toggle="collapse"
+      data-target="#navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" (click)="drop($event)">
       <svg viewBox="0 0 64 48">
         <path d="M19,15 L45,15 C70,15 58,-2 49.0177126,7 L19,37"></path>
         <path d="M19,24 L45,24 C61.2371586,24 57,49 41,33 L32,24"></path>
         <path d="M45,33 L19,33 C-8,33 6,-2 22,14 L45,37"></path>
       </svg>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ml-auto">
         <!-- binding user name and photo -->
-        <li class="nav-item">
-          <a class="nav-link" href="#">Crew</a>
+        <li class="nav-item" [routerLink]="['/routePath']" style="cursor: pointer;" >
+          <a class="nav-link">Crew</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Committees</a>
+        <li class="nav-item" [routerLink]="['/routePath']" style="cursor: pointer;">
+          <a class="nav-link">Committees</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Events</a>
+        <li class="nav-item" [routerLink]="['/routePath']" style="cursor: pointer;">
+          <a class="nav-link">Events</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About Us</a>
+        <li class="nav-item" [routerLink]="['/routePath']" style="cursor: pointer;">
+          <a class="nav-link">About Us</a>
         </li>
         <!-- end -->
         <li class="nav-item dropdown">
-          <button class="nav-link btn btn-default shadow-none border-0" href="#" id="navbarDropdownMenuLink"
+          <button class="nav-link btn btn-default shadow-none border-0" id="navbarDropdownMenuLink"
             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             A5oyyyyya <i class="fas fa-angle-down"></i>
           </button>
