--- a/src/app/profile/user-info/user-info.component.css
+++ b/src/app/profile/user-info/user-info.component.css
@@ -6,10 +6,13 @@ img{
     padding: 0px !important;
     height: 180px !important;
 }
+.form-group{
+    display: block;
+}
 .img-div{
-    margin-top: 0px !important;
-    margin-right: 0px !important;
-    float: right;    
+    float: right;  
+    width: 100%;
+
 }
 .card {
     border: 0.5px solid #0275d8;
