--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="row justify-content-lg-center">
     <div class="col-md-7">
         <app-user-info></app-user-info>
