created signIn,Up components

--- a/src/app/dashboard-main-layout/dashboard-main-layout.component.html
+++ b/src/app/dashboard-main-layout/dashboard-main-layout.component.html
@@ -20,7 +20,7 @@
               A5oyyyyya <i class="fas fa-angle-down"></i>
             </button>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" [routerLink]="['profile']">Profile</a>
+              <a class="dropdown-item" [routerLink]="['/profile']">Profile</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item">Logout</a>
             </div>
