--- a/src/app/post-input/post-input.component.css
+++ b/src/app/post-input/post-input.component.css
@@ -1,28 +1,19 @@
+.card{
+  margin-top: 15px;
+}
+.card-body{
+  padding: 15px;
+}
 h5 {
   font-size: medium;
 }
-.card {
-  border: 0.5px solid #0275d8;
+textarea{
+  resize: none;
+  width: 100%;
+  height: 100%;
+  padding: 15px;
+  border-radius: 50px;
 }
-.card:hover {
-  border: 0.5px solid palevioletred;
-}
-.checkbox-light {
-  margin-right: 5px;
-}
-.clear-card {
-  padding: 10px !important;
-}
-.custom-control {
-  position: relative;
-  display: inline-flex;
-  min-height: 1.5rem;
-  padding-left: 1.5rem;
-  margin-right: 1rem;
-  cursor: pointer;
-}
-.custom-control-input {
-  position: absolute;
-  z-index: -1;
-  /* opacity: 10; */
+form-group:active{
+  border-color: none;
 }
