--- a/src/app/post-input/post-input.component.html
+++ b/src/app/post-input/post-input.component.html
@@ -1,38 +1,17 @@
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-8">
         <div class="card">
-            <div class="card-header">
-                <h5>
-                    <i class="fa fa-lightbulb fa-fw" aria-hidden="true"></i> |
-                    <b>Share your idea</b>
-                </h5>
-            </div>
-            <div class="card-body clear-card">
-                <div class="form-group">
-                    <textarea class="form-control idea-text" rows="2" style="resize: none; width: 100%" name="idea"
-                        placeholder="What's the idea?" id="idea" required></textarea>
-                    <small id="errorMsg" data="idea" class="form-text font-weight-bold"></small>
-                </div>
-                <hr>
-                <div class="form-group">
-                    <div class="col">
-                        <button class="btn btn-primary cursor-pointer float-right" id="shareIdeaBtn">
-                            SHARE
-                            <i class="fa fa-bullhorn fa-fw" aria-hidden="true"></i>
-                        </button>
-                        <div class="checkbox">
-                            <div class="form-group">
-                                <label class="custom-control custom-checkbox">
-                                    <input type="checkbox" class="custom-control" name="anonymous" value="anonymous">
-                                    <span class="custom-control-indicator"></span>
-                                    <span class="custom-control-description">Share as Anonymous</span>
-                                </label>
-                                <br>
-                                <small class="text-danger font-weight-bold" id="errorMsg" data="pref"></small>
-                            </div>
-                        </div>
+            <div class="card-header"><h5><i class="fa fa-lightbulb">&nbsp;</i>Just Think</h5></div>
+            <div class="card-body">
+                <form action="">
+                    <div class="form-group">
+                        <textarea name="Idea" rows="5" placeholder="Make your Idea Shine "></textarea>
                     </div>
-                </div>
+                    <hr>
+                    <div class="from-group">
+                        <button class="btn btn-outline-primary">Share</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
