--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,12 +1,12 @@
 <app-header></app-header>
 <div class="row justify-content-lg-center">
-    <div class="col-md-7">
-      <app-profile-controls></app-profile-controls>
-      <div>
-        <div>
+    <div class="col-md-12">
+        <app-user-pic></app-user-pic>
+    </div>
+</div>
 <div class="row">
-    <div class="col-md-6">
-        <app-user-info></app-user-info>
+    <div class="col-md-5">
+        <app-profile-controls></app-profile-controls>
     </div>
     <div class="col-md-6">
         <router-outlet></router-outlet>
