--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -33,8 +33,8 @@
       <div class="col-md-5">
         <div class="login">
           <h1>Login : </h1>
-          <div class="card form-card">
-            <form (ngSubmit)="onSubmit()" #form="ngForm" >
+          <!-- <div class="card form-card">
+            <form >
               <div class="form-group">
                 <label for="Email"><i class="fa fa-envelope">&nbsp;&nbsp;</i>Email</label>
                 <input type="Email" id="Email" class="form-control" formControlName="email">
@@ -48,11 +48,8 @@
                 &nbsp;  
                 <label for="rememberMe">remember me</label>
               </div>
-              <div class="form-group p-3">
-                <a [routerLink]="['/signUp']">remember me</a>   
-              </div>
             </form>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
