--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,4 +1,4 @@
-<div class="card form-card">
+<!-- <div class="card form-card">
     <form (ngSubmit)="onSubmit()" #form="ngForm">
       <div class="form-group">
         <label for="name"><i class="fa fa-user">&nbsp;&nbsp;</i>Name: </label>
@@ -17,4 +17,4 @@
         <input type="Password" id="ConfirmPassword" class="form-control" formControlName="ConfirmPassword">
       </div>
     </form>
-  </div>
+  </div> -->
