--- a/src/app/side-nav/side-nav.component.css
+++ b/src/app/side-nav/side-nav.component.css
@@ -13,36 +13,41 @@
     flex-direction: column;
     max-width: 100%;
     width: 100%;
-    background: #f8f9fa!important;
+    background: #f8f9fa !important;
     height: 100%;
     border: 0;
     display: block;
     overflow: overlay;
     touch-action: unset;
 }
-.brand{
+
+.brand {
     display: flex;
     justify-content: center;
     align-items: baseline;
 }
-.brand span{
+
+.brand span {
     font-family: 'Cookie', cursive;
     font-size: 23px;
 }
+
 @media (max-width: 767px) {
     .admin-name {
         display: none;
     }
+
     #sideNav {
         transition: 10ms ease;
         z-index: 10;
-        width: 80%;
+        width: 100%;
         background: #a5a5a54f;
-        box-shadow: none !important;
+        box-shadow: 0 0 20px rgba(0, 123, 255, .25);
     }
 
     .nav {
         position: absolute;
+        width: 50%;
     }
 }
 
@@ -50,6 +55,7 @@
     #sideNav {
         display: block;
     }
+
     .mains {
         padding-left: 15rem !important;
     }
@@ -93,9 +99,10 @@
 .dropdown-menu .dropdown-item:hover {
     background: #e5f2fb;
     color: #3587b6;
-    cursor: pointer;clip-path: circle(75%);
+    cursor: pointer;
+    clip-path: circle(75%);
     border-left: 2px solid #3587b6;
-    
+
 }
 
 .nav .nav-item .nav-link:hover i {
@@ -115,7 +122,7 @@
     clip-path: circle(100% at 10% 10%);
 }
 
-.nav .nav-item .navbar-collapse .li a{
+.nav .nav-item .navbar-collapse .li a {
     padding: 5px;
     color: #222b3a;
     transition: 400ms ease;
