--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,4 +1,4 @@
-<nav id="sideNav" class="collapse" data-wow-duration="0s" data-wow-delay="0s">
+<nav id="sideNav" class="collapse">
   <!--  list  -->
   <ul class="nav nav-tabs py-3">
     <div class="pb-4 brand">
