--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,9 +1,29 @@
-.profile {
+.card {
+    box-shadow: 0 0 5px #dee2e6 !important;
     background: white;
-    border-radius: 4px;
-    text-align: center;
-    box-shadow: 0 0 5px #dee2e6;
     transition: 500ms ease-in-out;
+    margin: 8px;
+    border-radius: 4px;
+    border: 0;
+}
+
+.logs {
+    flex-grow: 2;
+}
+
+.no_data {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    justify-content: center;
+}
+
+.no_data h1 {
+    color: #8e8e8e;
+}
+
+.profile {
+    text-align: center;
 }
 
 .profile .img {
@@ -52,4 +72,35 @@
     padding: .4rem 1rem;
     color: #3587b6;
     border-radius: 31px;
+}
+
+.adding button {
+    background: transparent;
+    border: 0;
+    color: black;
+    box-shadow: none;
+    padding: 1rem;
+    margin-bottom: 1px;
+}
+.adding .dropdown button:focus{
+    box-shadow: none;
+}
+.adding .dropdown-menu{
+    width: 100%;
+    border: 0;
+    background: transparent;
+    transform: translate3d(0px, 33px, 0px) !important;
+    transition: 500ms ease  ;
+}
+.adding .dropdown-menu a.dropdown-item {
+    background: white;
+    margin: 8px 0;
+    box-shadow: 0 0 5px #dee2e6;
+    padding: 1rem;
+    border-radius: 4px;
+    transition: 500ms  ease;
+}
+.adding .dropdown-menu a.dropdown-item:hover{
+    background: #e5f2fb;
+    color:#3587b6 ;
 }
