--- a/src/app/dashboard/forms/forms.component.css
+++ b/src/app/dashboard/forms/forms.component.css
@@ -3,22 +3,19 @@
     padding-bottom: .5rem !important;
     display: flex;
     justify-content: flex-end;
-    align-items: center;
 }
 
 .search label {
-    top: 18%;
-    left: 13px;
-    margin: 0;
-    text-shadow: none;
-    color: #626262;
-    font-size: .9rem;
+    top: 7%;
+    left: 10px;
 }
 
 .search .search-input {
-    border: 1px solid #e1e1e1e3;
+    border: 0;
+    box-shadow: 0 0 5px #dee2e6 !important;
     padding-left: 35px;
     font-size: smaller;
+    width: 225px;
 }
 
 .search .search-input:focus {
