--- a/src/app/dashboard/interviews/interviews.component.html
+++ b/src/app/dashboard/interviews/interviews.component.html
@@ -4,7 +4,8 @@
       <!-- search -->
       <div class="form-group mb-0">
         <div class="p-0 position-relative">
-          <label for="search" class="position-absolute"><i class="fas fa-search"></i></label>
+          <label for="search" class="position-absolute">            <img src="assets/icons/search.svg" width="20px" alt="search icon">
+          </label>
           <input id="search" type="text" class="form-control search-input" name="search" placeholder="Search for event">
         </div>
       </div>
