--- a/src/app/side-nav/side-nav.component.css
+++ b/src/app/side-nav/side-nav.component.css
@@ -2,6 +2,7 @@
 #sideNav {
     transition: 500ms ease;
     background: white;
+    /* background: #47494a; */
     position: fixed;
     height: 100%;
     top: 0;
@@ -14,6 +15,7 @@
     max-width: 100%;
     width: 100%;
     background: #f8f9fa !important;
+    /* background: #38454e !important; */
     height: 100%;
     border: 0;
     display: block;
@@ -30,6 +32,7 @@
 .brand span {
     font-family: 'Cookie', cursive;
     font-size: 23px;
+    /* color: white; */
 }
 
 @media (max-width: 767px) {
@@ -47,7 +50,7 @@
 
     .nav {
         position: absolute;
-        width: 50%;
+        width: 65%;
     }
 }
 
@@ -77,6 +80,7 @@
     transition: 500ms ease;
     border-radius: 2px;
     color: #3f4253;
+    /* color: white; */
     clip-path: circle(100% at 10% 10%);
 }
 
