--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,6 +1,6 @@
-<nav id="sideNav" class="collapse">
+<nav id="sideNav" class="collapse" (click)="toggle()">
   <!--  list  -->
-  <ul class="nav nav-tabs py-3">
+  <ul class="nav nav-tabs py-3"  (click)="$event.stopPropagation()">
     <div class="pb-4 brand">
       <img src="assets/images/logo.png" width="25%" alt="connected-family">
       <span class="ml-2">Dashboard</span>
