--- a/src/styles.css
+++ b/src/styles.css
@@ -22,3 +22,5 @@ body {
 body{
     background-color: #F8F9FA;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
