--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -99,7 +99,7 @@
       </li>
       <!-- users -->
       <li class="nav-item">
-        <a class="nav-link" role="button"><i class="fas fa-users mr-2"></i>Users</a>
+        <a class="nav-link" [routerLink]="['/dashboard/users']"><i class="fas fa-users mr-2"></i>Users</a>
       </li>
       <!-- logs -->
       <li class="nav-item">
