--- a/src/app/dashboard-main-layout/dashboard-main-layout.component.html
+++ b/src/app/dashboard-main-layout/dashboard-main-layout.component.html
@@ -39,7 +39,7 @@
     <!-- main content -->
     <div class="content p-4">
       <!-- header -->
-      <div class="header p-3">
+      <div class="header py-3">
         <div class="head">
           <h3>{{title}}</h3>
         </div>
@@ -47,7 +47,7 @@
         <div class="add" *ngIf="addForm">
           <a class="btn btn-primary" [routerLink]="routerUrl">
             <i class="fas fa-plus mr-2"></i>
-            <span>Add</span>
+            <span>Add New</span>
           </a>
         </div>
       </div>
