--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -3,7 +3,7 @@
     background: white;
     transition: 500ms ease-in-out;
     margin: 8px;
-    border-radius: 4px;
+    border-radius: 14px;
     border: 0;
 }
 
@@ -18,8 +18,23 @@
     justify-content: center;
 }
 
-.no_data h1 {
+.no_data:before {
+    background-image: url('../../assets/images/no_data.svg');
+    background-repeat: no-repeat;
+    background-size: 20%;
+    background-position: center;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    filter: opacity(0.5);
+}
+
+.no_data h2 {
     color: #8e8e8e;
+    z-index: 1;
 }
 
 .profile {
@@ -74,33 +89,52 @@
     border-radius: 31px;
 }
 
-.adding button {
-    background: transparent;
-    border: 0;
-    color: black;
-    box-shadow: none;
-    padding: 1rem;
-    margin-bottom: 1px;
+.adding,
+.date {
+    display: flex;
+    justify-content: center;
+    height: max-content;
+    transition: 500ms ease;
+    overflow: hidden;
 }
-.adding .dropdown button:focus{
-    box-shadow: none;
+
+.adding div {
+    border: 1px dashed #d2d2d2;
+    color: #9e9e9e;
+    border-radius: 65%;
+    width: 100px !important;
+    height: 100px;
+    text-align: center;
+    transition: 500ms ease;
+    cursor: pointer;
 }
-.adding .dropdown-menu{
-    width: 100%;
-    border: 0;
-    background: transparent;
-    transform: translate3d(0px, 33px, 0px) !important;
-    transition: 500ms ease  ;
+
+.adding:hover div {
+    border: 1px solid #3587b6;
+    color: #3587b6;
 }
-.adding .dropdown-menu a.dropdown-item {
-    background: white;
-    margin: 8px 0;
-    box-shadow: 0 0 5px #dee2e6;
-    padding: 1rem;
-    border-radius: 4px;
-    transition: 500ms  ease;
-}
-.adding .dropdown-menu a.dropdown-item:hover{
+
+.adding:hover,
+.date:hover {
+    transform: scale(1.05);
     background: #e5f2fb;
-    color:#3587b6 ;
+}
+
+.date div {
+    width: 100px !important;
+    height: 100px;
+    text-align: center;
+    transition: 500ms ease;
+}
+
+.date div span {
+    font-weight: 800;
+}
+
+.new_img {
+    position: absolute;
+    width: 70px;
+    bottom: -15px;
+    right: -15px;
+    filter: opacity(0.05);
 }
