--- a/src/app/dashboard/events/events.component.html
+++ b/src/app/dashboard/events/events.component.html
@@ -22,7 +22,7 @@
           <th scope="col" width="80">Name</th>
           <th scope="col" width="50">Start</th>
           <th scope="col" width="50">End</th>
-          <th scope="col" >Description</th>
+          <th scope="col">Description</th>
           <th scope="col" width="30">Pref. type</th>
           <th scope="col" width="30">Published</th>
           <th scope="col" width="80">Actions</th>
@@ -45,5 +45,73 @@
         </tr>
       </tbody>
     </table>
+
+    <table mat-table [dataSource]="dataSource" matSort>
+      <!-- ID Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> # </th>
+        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+      </ng-container>
+      <!-- ID Column -->
+      <ng-container matColumnDef="unique">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> # </th>
+        <td mat-cell *matCellDef="let row"> {{row.unique}} </td>
+      </ng-container>
+      <!-- Year Column -->
+      <ng-container matColumnDef="year">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Year</th>
+        <td mat-cell *matCellDef="let row"> {{row.year}} </td>
+      </ng-container>
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name </th>
+        <td mat-cell *matCellDef="let row">
+          <a [routerLink]="['/dashboard/events/event-details']">
+            {{row.name}}
+          </a>
+        </td>
+      </ng-container>
+      <!-- Start Column -->
+      <ng-container matColumnDef="start">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Start </th>
+        <td mat-cell *matCellDef="let row"> {{row.start}} </td>
+      </ng-container>
+      <!-- End Column -->
+      <ng-container matColumnDef="end">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> End </th>
+        <td mat-cell *matCellDef="let row"> {{row.end}} </td>
+      </ng-container>
+      <!-- Description Column -->
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+        <td mat-cell *matCellDef="let row"> {{row.description}} </td>
+      </ng-container>
+      <!-- Pref Column -->
+      <ng-container matColumnDef="pref_type">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Pref. Type </th>
+        <td mat-cell *matCellDef="let row"> {{row.pref_type}} </td>
+      </ng-container>
+      <!-- published Column -->
+      <ng-container matColumnDef="published">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Published </th>
+        <td mat-cell *matCellDef="let row">
+          <ng-container *ngIf="!row.published">
+          </ng-container>
+          <ng-container *ngIf="row.published">
+            <button class="publish">Publish</button>
+          </ng-container>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      <!-- Row shown when there is no matching data. -->
+      <!-- <tr class="mat-row" *matNoDataRow> -->
+      <!-- <td class="mat-cell" colspan="4">No data matching</td> -->
+      <!-- </tr> -->
+    </table>
+
+
   </div>
 </app-dashboard-main-layout>
