--- a/src/app/dashboard/users/users.component.css
+++ b/src/app/dashboard/users/users.component.css
@@ -3,19 +3,22 @@
     padding-bottom: .5rem !important;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
 }
 
 .search label {
-    top: 7%;
-    left: 10px;
+    top: 18%;
+    left: 13px;
+    margin: 0;
+    text-shadow: none;
+    color: #626262;
+    font-size: .9rem;
 }
 
 .search .search-input {
-    border: 0;
-    box-shadow: 0 0 5px #dee2e6 !important;
+    border: 1px solid #e1e1e1e3;
     padding-left: 35px;
     font-size: smaller;
-    width: 225px;
 }
 
 .search .search-input:focus {
@@ -48,12 +51,4 @@ table {
     border-radius: 5px;
     padding: 8px;
 
-}
-
-
-.mat-table{
-    width: 100% !important;
-}
-.mat-header-row th{
-    font-size: .95rem;
 }
