--- a/src/app/side-nav/side-nav.component.css
+++ b/src/app/side-nav/side-nav.component.css
@@ -1,12 +1,13 @@
 /* sidenav */
 #sideNav {
     transition: 500ms ease;
-    background: white;
-    /* background: #47494a; */
+    /* background: white; */
+    background: #47494a;
     position: fixed;
     height: 100%;
     top: 0;
-    width: 20%;
+    /* width: 20%; */
+    width: 18%;
 }
 
 .nav {
@@ -14,8 +15,8 @@
     flex-direction: column;
     max-width: 100%;
     width: 100%;
-    background: #f8f9fa !important;
-    /* background: #38454e !important; */
+    /* background: #f8f9fa !important; */
+    background: #38454e !important;
     height: 100%;
     border: 0;
     display: block;
@@ -32,7 +33,7 @@
 .brand span {
     font-family: 'Cookie', cursive;
     font-size: 23px;
-    /* color: white; */
+    color: white;
 }
 
 @media (max-width: 767px) {
@@ -79,8 +80,8 @@
     border: 1px solid transparent;
     transition: 500ms ease;
     border-radius: 2px;
-    color: #3f4253;
-    /* color: white; */
+    /* color: #3f4253; */
+    color: white;
     clip-path: circle(100% at 10% 10%);
 }
 
@@ -101,12 +102,13 @@
 .nav .nav-item .nav-link:hover,
 .nav .nav-item .navbar-collapse .li:hover,
 .dropdown-menu .dropdown-item:hover {
-    background: #e5f2fb;
+    /* background: #e5f2fb; */
+    background: #2a333a;
     color: #3587b6;
     cursor: pointer;
     clip-path: circle(75%);
     border-left: 2px solid #3587b6;
-
+    transform: scale(1.05);
 }
 
 .nav .nav-item .nav-link:hover i {
