--- a/src/app/dashboard-main-layout/dashboard-main-layout.component.css
+++ b/src/app/dashboard-main-layout/dashboard-main-layout.component.css
@@ -139,8 +139,20 @@ nav{
 .navbar-toggler.active svg path:nth-child(3) {
     --offset: 58px;
 }
+/* .header{
+    transition: ;
 
-
+} */
+.fixed_header{
+    position: fixed;
+    width: 100%;
+    z-index: 12;
+    background-color: white;
+    top: 0;
+}
+.fixed_header h3{
+    font-size: 16px;
+}
 .add a{
     transition: 500ms ease;
     background: #4ca0d6;
