--- a/src/app/dashboard-main-layout/dashboard-main-layout.component.html
+++ b/src/app/dashboard-main-layout/dashboard-main-layout.component.html
@@ -1,4 +1,4 @@
-<div class="dashboard">
+<div class="dashboard" >
   <app-side-nav></app-side-nav>
   <div class="main">
     <!-- nav -->
@@ -37,9 +37,9 @@
       </div>
     </nav>
     <!-- main content -->
-    <div class="content p-4">
+    <div class="content" appScrollDashboard [header]="head">
       <!-- header -->
-      <div class="header py-3">
+      <div class="header p-4"  #head>
         <div class="head">
           <h3>{{title}}</h3>
         </div>
@@ -52,7 +52,7 @@
         </div>
       </div>
       <!-- content -->
-      <div class="main_content">
+      <div class="main_content p-4">
         <ng-content></ng-content>
       </div>
     </div>
