--- a/src/app/dashboard-main-layout/dashboard-main-layout.component.html
+++ b/src/app/dashboard-main-layout/dashboard-main-layout.component.html
@@ -41,7 +41,7 @@
       <!-- header -->
       <div class="header p-4"  #head>
         <div class="head">
-          <h3>{{title}}</h3>
+          <h3 class="m-0">{{title}}</h3>
         </div>
         <!-- add -->
         <div class="add" *ngIf="addForm">
