--- a/src/app/side-nav/side-nav.component.css
+++ b/src/app/side-nav/side-nav.component.css
@@ -1,8 +1,8 @@
 /* sidenav */
 #sideNav {
     transition: 500ms ease;
-    /* background: white; */
-    background: #47494a;
+    background: white;
+    /* background: #47494a; */
     position: fixed;
     height: 100%;
     top: 0;
@@ -15,8 +15,8 @@
     flex-direction: column;
     max-width: 100%;
     width: 100%;
-    /* background: #f8f9fa !important; */
-    background: #38454e !important;
+    background: #f8f9fa !important;
+    /* background: #38454e !important; */
     height: 100%;
     border: 0;
     display: block;
@@ -80,8 +80,8 @@
     border: 1px solid transparent;
     transition: 500ms ease;
     border-radius: 2px;
-    /* color: #3f4253; */
-    color: white;
+    color: #3f4253;
+    /* color: white; */
     clip-path: circle(100% at 10% 10%);
 }
 
@@ -102,8 +102,8 @@
 .nav .nav-item .nav-link:hover,
 .nav .nav-item .navbar-collapse .li:hover,
 .dropdown-menu .dropdown-item:hover {
-    /* background: #e5f2fb; */
-    background: #2a333a;
+    background: #e5f2fb;
+    /* background: #2a333a; */
     color: #3587b6;
     cursor: pointer;
     clip-path: circle(75%);
