--- a/src/app/dashboard/events/events.component.html
+++ b/src/app/dashboard/events/events.component.html
@@ -33,7 +33,7 @@
           <td>1</td>
           <td>1000</td>
           <td>2019</td>
-          <td><a [routerLink]="['/dashboard/events/event-details']">Eureka</a> </td>
+          <td><a (click)="openEventCard()">Eureka</a> </td>
           <td>2018-04-12 22:00:00</td>
           <td>2018-04-12 22:00:00</td>
           <td>Bla bla bla</td>
